--- a/lt-showcase/package.json
+++ b/lt-showcase/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "bootstrap": "^5.3.3",
+    "cypress": "^13.7.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
